--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,15 +34,15 @@
         "semi": "warn",
         "curly": "warn",
         "wrap-iife": "warn",
-        "no-shadow": "warn",
-        "comma-dangle": "warn",
+        "no-shadow": "off",
+        "comma-dangle": "off",
         "keyword-spacing": "warn",
         "space-before-blocks": "warn",
         "no-multi-spaces": "warn",
         "no-extra-semi": "warn",
         "padded-blocks": "warn",
-        "space-in-parens": "warn",
-        "no-underscore-dangle": "warn",
+        "space-in-parens": "off",
+        "no-underscore-dangle": "off",
         "lines-between-class-members": "warn",
         "nonblock-statement-body-position": "warn",
         "max-classes-per-file": "warn",
