feat : added view classes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,9 @@
           }
     },
     "rules": {
+        "class-methods-use-this": "off",
         "prettier/prettier": "error",
-        "no-unused-vars": "warn",
+        "no-unused-vars": "off",
         "no-console": "off",
         "func-names": "off",
         "no-plusplus": "off",
